overflow fixes

--- a/src/app/components/tasksContainer.scss
+++ b/src/app/components/tasksContainer.scss
@@ -141,7 +141,7 @@
         align-items: center;
         justify-content: center;
         min-width: 280px;
-        width: 32%;
+        width: 400px;
         height: 100%;
         background-color: rgba(var(--background-task), 0.50);
         backdrop-filter: blur(5px);
